--- a/src/components/Home/experiences.scss
+++ b/src/components/Home/experiences.scss
@@ -10,10 +10,22 @@
   height: 100vh;
   flex: 0 0 100vw;
   overflow: hidden;
+  background-color: #000;
 
   @media (min-width: 768px) {
     height: 100vh;
     min-height: 75rem;
+  }
+
+  &-strip {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: -1rem;
+    width: 2rem;
+    height: 100%;
+    background-color: #000;
+    z-index: 100;
   }
 
   .bg-image {
@@ -24,6 +36,7 @@
     height: 100%;
     transform-origin: center center;
     z-index: 1;
+    background-color: #000;
 
     img {
       display: block !important;
