--- a/src/components/Home/founder.scss
+++ b/src/components/Home/founder.scss
@@ -6,6 +6,7 @@
   position: relative;
   width: 100%;
   z-index: 10;
+  background-color: #000;
 
   @media (min-width: 768px) {
     width: 100vw;
